<resources>
    <string name="app_name">CommunicationAndroid</string>
    <string name="login_etUsername">Username</string>
    <string name="signUP_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLoginText">Login</string>
    <string name="login_tvWelcome">Welcome back</string>
    <string name="signUp_tvWelcome">Welcome</string>
    <string name="login_btnSignUp">Sign Up</string>
    <string name="login_textSignUp">Not registered? \nEnter your details and start your journey</string>
    <string name="signUp_edConfirmPassword">Confirm Password</string>
    <string name="signUp_btnSubmitText">Submit</string>
    <string name="signUp_tvRegistered">Already registered?</string>
    <string name="signUp_btnLogin">Login</string>
    <string name="addContact_edUsernameHint">Username</string>
    <string name="addContact_edNicknameHint">Nickname</string>
    <string name="addContact_edServerHint">Server</string>
    <string name="addContact_btnAddText">Add</string>
    <string name="BaseUrl">http://10.0.2.2:7049/api/</string>
    <string name="ServerUrl">http://10.0.2.2:</string>
    <string name="chat_inputMessageHInt">Type a message here...</string>
    <string name="contact_item_profilePicture">profile picture</string>
    <string name="menu_refresh">menu_refresh</string>
    <string name="channel_name">private message</string>
    <string name="channel_description">Receive notification when private message is send to your account</string>
</resources>








