<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:clipToPadding="false"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@drawable/background"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tvWelcome"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="@string/login_etUsername"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="@string/login_etPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textColorHint="@color/white"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/backgroud_button"
            android:backgroundTint="@color/white"
            android:text="@string/login_btnLoginText"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_25sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_textSignUp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/loginBtnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/login_btnSignUp"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:layout_marginTop="@dimen/_10sdp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>