<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:clipToPadding="false"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@drawable/background"
    tools:context=".Activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tvWelcome"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <FrameLayout
            android:id="@+id/signUp_addImageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp">

            <ImageView
                android:id="@+id/signUp_image"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image_input"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/signUp_addImageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Add Image"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"/>
        </FrameLayout>

        <EditText
            android:id="@+id/signUp_EditUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="@string/signUP_etUsername"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/signUp_EditPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="@string/login_etPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/signUp_EditConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="@string/signUp_edConfirmPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textColorHint="@color/white"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUp_btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/backgroud_button"
            android:backgroundTint="@color/white"
            android:text="@string/signUp_btnSubmitText"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_25sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp_tvRegistered"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/signUp_btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/signUp_btnLogin"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:layout_marginTop="@dimen/_10sdp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>