<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:clipToPadding="false"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@drawable/background"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:text="Add Contact"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/_20ssp"/>

        <EditText
            android:id="@+id/addContact_etUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="@string/addContact_edUsernameHint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/addContact_etNickname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="@string/addContact_edNicknameHint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textColorHint="@color/white"/>

        <EditText
            android:id="@+id/addContact_etServer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/background_input"
            android:hint="@string/addContact_edServerHint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textColorHint="@color/white"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addContact_btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/backgroud_button"
            android:backgroundTint="@color/white"
            android:text="@string/addContact_btnAddText"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>